maze.wallfindfollow.WallFindFollowMaze.scala.error
Erreur de compilation :
WallFindFollowMaze:9: error: not found: value random3
  var r = random3()
          ^WallFindFollowMaze:10: error: missing arguments for method & in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  while (!estFaceMur() & getDirection()=Direction.NORTH) {
                       ^WallFindFollowMaze:11: error: not found: value random3
    r = random3()
        ^